--- a/journal/201811.md
+++ b/journal/201811.md
@@ -194,7 +194,7 @@ Attended:
 * [PDX Blockchain Summit & Hackathon](https://pdxblockchainsummit.org) in Portland, USA. Raedah Group will presented Decentralized Governance in Decred. (photos: [1](https://twitter.com/raedahgroup/status/1061722513615527936) [2](https://twitter.com/dantrevino/status/1061283707099594752))
 * [Token Forum](https://www.thetokenforum.com/) in Seattle, USA. @oregonisaac presented on Decred and Blockchain Governance. @Eli-RG [noted](https://decred.slack.com/archives/C66363X44/p1542039292115100) that the talk was a big success with lots of feedback coming in like: "most interesting talk of the day" and "you've opened my eyes" or, as one of the organizers put it: "He's...great!!!!". More notes from @oregonisaac [here](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154183054312819Bkteq:decred.org). ([photo](https://matrix.decred.org/_matrix/media/v1/download/decred.org/RtgfjRzYbrvNjslhOZQNsNtc))
 * [Blockmaster](https://www.blockmaster.com.br/eventos/forum-blockmaster-2018-sao-paulo/) in Sao Palo, Brazil. @Rhama presented Decred and Politeia. (photos: [1](https://matrix.decred.org/_matrix/media/v1/download/decred.org/TgiORGBFSiEAQcuPzPvtZczZ) [2](https://matrix.decred.org/_matrix/media/v1/download/decred.org/UFigpyKJeaOozzbiCeIiNSdH))
-* [FinTech Melbourne Community Networking](https://www.meetup.com/Melbourne-FinTech-Startups-Meetup/events/256195153/) in Melbourne, Australia. @eSizeDave [reports](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154217119815341VaPZS:decred.org): "It was a great turnout especially considering only a week to promote on MeetUp. People were happy and many asked if we'd hold this event more regularly, which is of course our plan. We had people there from financial institutions, FinTech regulatory analysis and advocacy professionals, startups, and also other blockchain projects. Two data scientists from ANZ Bank told me they'd proactively googled for such an event and coincidentally found it, having not already being FinTech Melbourne MeetUp group members. So I guess it goes to show there's demand for such events. This was a good outcome, so we'll be putting in more effort into the next FinTech focused event.". See also a follow-up [discussion](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154220759315790UMKqT:decred.org) about why to focus on "fintech" when it is an industru Decred is supposed to disrupt. (photos: [1](https://twitter.com/coder_bec/status/1062251105198002177) [2](https://www.instagram.com/p/BqHJmarns8B/))
+* [FinTech Melbourne Community Networking](https://www.meetup.com/Melbourne-FinTech-Startups-Meetup/events/256195153/) in Melbourne, Australia. @eSizeDave [reports](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154217119815341VaPZS:decred.org): "It was a great turnout especially considering only a week to promote on MeetUp. People were happy and many asked if we'd hold this event more regularly, which is of course our plan. We had people there from financial institutions, FinTech regulatory analysis and advocacy professionals, startups, and also other blockchain projects. Two data scientists from ANZ Bank told me they'd proactively googled for such an event and coincidentally found it, having not already being FinTech Melbourne MeetUp group members. So I guess it goes to show there's demand for such events. This was a good outcome, so we'll be putting in more effort into the next FinTech focused event.". See also a follow-up [discussion](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154220759315790UMKqT:decred.org) about why to focus on "fintech" when it is an industry that Decred is supposed to disrupt. (photos: [1](https://twitter.com/coder_bec/status/1062251105198002177) [2](https://www.instagram.com/p/BqHJmarns8B/))
 * [BlockchainFiesta](http://blockchainfiesta.io/) in Krakow, Poland. @kozel and @donmario gave an interview to [FXMag](https://www.fxmag.pl/) that will be published later. Excerpt from the [full report](https://github.com/heyvj/decred-events/blob/master/reports/20181116-Blockchain-Fiesta-Krakow.md): "Some of the conference speakers that we engaged with were well impressed with Decred’s forethought and the 'build first, hype second' ethos". ([TV news](https://krakow.tvp.pl/39996203/kryptowaluty-przyszlosc-platnosci-xxi-wieku) coverage, photos: [album](https://photos.google.com/share/AF1QipOhLa_L0g5NrBWzKFTxMeDD7VJeUBzHzEyker-DRdZGuQoXS9ogpN3waxW26vj0CQ?key=Ty1jZ1NYRkdTY0dRRmNLc1JGcTdNby1BUlZ0eGZ3))
 * [Blockchain Melbourne](https://www.meetup.com/BlockchainMelbourne/events/256295215/) in Melbourne, Australia. @eSizeDave introduced Decred, followed by two presenters from Apollo Capital. First introduced their services and talked about how they do project analysis and due diligence, with an emphasis on the points where Decred checks the boxes. Second spoke specifically about Decred. From the notes: "A great well-educated crowd. Quite surprised we got such a good crowd for investment analysis, with only about 1.5 weeks promotion, plus a bloodbath hash war market." and "It should be noted that the bulk of the credit goes to @Zohand here as he has a longer standing relationship with Apollo Capital.". Announcement discussion is [here](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154165462111747igExP:decred.org), post-event notes with more insights are [here](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154271915121075kJobf:decred.org) and [here](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154312938324664CVmxQ:decred.org). ([photos](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154271920421079Uwail:decred.org))
 * [Lessons from DevCon4 & Web3 Summit](https://www.meetup.com/Web3-Melbourne/events/bnrhmqyxpblc/) in Melbourne, Australia. From @eSizeDave: "the event is held at the RMIT Blockchain Innovation Hub. The Royal Melbourne Institute of Technology (RMIT) is a university in Melbourne and the first in Australia to establish its own dedicated blockchain innovation hub as part of its School of Economics. (...) The official organisers have recently returned from Devcon in Prague, and will present on lessons learnt from the conference. They attended our event on Nov 20 and asked us and Apollo Capital to present on Decred, and specifically Politeia.". The event was mostly Ethereum people, but the Politeia presentation by James from Apollo Capital [seemed](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154340368426560pechG:decred.org) to go well. ([photos](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154340368426560pechG:decred.org))
