--- a/journal/201811.md
+++ b/journal/201811.md
@@ -208,55 +208,41 @@ Upcoming:
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
-
-{ratings news}
-
 Featured articles:
 
-* {1007} Blockchain forks and chain splits: why we should avoid them by @Haon ([medium](https://blog.goodaudience.com/blockchain-forks-and-chain-splits-why-we-should-avoid-them-f54c693a90f1))
-* {1105} https://www.coinbureau.com/interview/marco-peereboom-decred/
-* {1108} https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4
-* {1109} https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/
-* {1115} https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4
-* {1115} https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e
-* {1117} https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3
-* {1126} https://medium.com/@richardred/hash-war-theater-67d3fcac3e97
+* {1007} Blockchain forks and chain splits: why we should avoid them by @Haon ([medium](https://blog.goodaudience.com/blockchain-forks-and-chain-splits-why-we-should-avoid-them-f54c693a90f1), _missed in Oct issue_)
+* {1105} Marco Peereboom Interview: Governance, Decred & Politeia ([coinbureau.com](https://www.coinbureau.com/interview/marco-peereboom-decred/))
+* {1108} Decred Infrastructure Interviews: feeleep, Operator, coinmine.pl ([medium](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4))
+* {1115} PR in Politeia: Process, Progress, and Pitching In by @Dustorf ([medium](https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4))
+* {1115} Blockchain governance: how Decred iterates upon Bitcoin by @zubairzia0 ([medium](https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e))
+* {1117} DCR Ticket Splitting - All you need to know! by @David ([medium](https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3), [reddit](https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/))
+* {1126} Hash War Theater: A Costly Spectacle by @richardred ([medium](https://medium.com/@richardred/hash-war-theater-67d3fcac3e97))
 * {1129} What is Decred? by @kozel (Polish, [bithub.pl](https://bithub.pl/artykuly/czym-jest-decred/))
 
 Articles:
 
-* {1103} https://coiniq.com/decred-review/
-* {1112} https://medium.com/@info_5576/staking-coins-part-3-decred-83d73f29038d
-* {1122} https://captainaltcoin.com/smaller-pow-coins-are-in-constant-danger-of-51-attacks-decred-dcr-governance-model-is-the-solution/
-* {1122} [DCR balances equity distribution through a hybrid consensus mechanism](https://michelangelo.sncrating.com/report/168)(CN) by sncrating.com
-* {1124} [Rating article review - DCR balances equity distribution through a hybrid consensus mechanism](https://medium.com/@guang.dcr/%E8%A7%A3%E6%9E%90%E8%AF%84%E7%BA%A7-dcr-%E9%80%9A%E8%BF%87%E6%B7%B7%E5%90%88%E5%85%B1%E8%AF%86%E6%9C%BA%E5%88%B6%E5%B9%B3%E8%A1%A1%E6%9D%83%E7%9B%8A%E5%88%86%E9%85%8D-%E6%A0%87%E5%87%86%E5%85%B1%E8%AF%86%E8%AF%84%E7%BA%A7-5edc6f03dc1c)(CN) by @guang
-* {1124} [Decred Split Ticket](https://medium.com/@guang.dcr/%E6%89%AB%E7%9B%B2-decred%E5%88%86%E7%A5%A8-ffe3eb2de64d)(CN) by @guang
+* {1103} Decred Review – Democratic Governance Puts Users in Control ([coiniq.com](https://coiniq.com/decred-review/))
+* {1122} Smaller PoW coins are in constant danger of 51% attacks – Decred (DCR) governance model is the solution ([captainaltcoin.com](https://captainaltcoin.com/smaller-pow-coins-are-in-constant-danger-of-51-attacks-decred-dcr-governance-model-is-the-solution/))
+* {1124} Decred Ticket Splitting by @guang (Chinese, [medium](https://medium.com/@guang.dcr/%E6%89%AB%E7%9B%B2-decred%E5%88%86%E7%A5%A8-ffe3eb2de64d))
 
 There were more articles on various websites, but we only list a selected few. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
 
 Translations:
 
-* @zubairzia0's [Blockchain governance: how Decred iterates upon Bitcoin](https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e) [in Chinese](https://medium.com/@guang.dcr/%E8%AF%91%E6%96%87-%E5%8C%BA%E5%9D%97%E9%93%BE%E6%B2%BB%E7%90%86-decred%E5%A6%82%E4%BD%95%E8%BF%AD%E4%BB%A3%E6%AF%94%E7%89%B9%E5%B8%81-53f434b26105) by @guang
-* @thedecreddigest's [Decred: Where did it all begin?](https://thedecreddigest.com/2017/06/10/decred-where-did-it-all-begin/) [in Spanish](https://medium.com/@decred_es/decred-d%C3%B3nde-comenz%C3%B3-todo-aaa49fed0091) by @elian
-* @jy-p's [Decred Recruiting](https://blog.decred.org/2017/07/25/Decred-Recruiting/) [in Spanish](https://medium.com/@decred_es/c%C3%B3mo-ser-contratista-en-decred-d0f05386f799) by @elian
+* [Blockchain governance: how Decred iterates upon Bitcoin](https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e) by @zubairzia0 - [in Chinese](https://medium.com/@guang.dcr/%E8%AF%91%E6%96%87-%E5%8C%BA%E5%9D%97%E9%93%BE%E6%B2%BB%E7%90%86-decred%E5%A6%82%E4%BD%95%E8%BF%AD%E4%BB%A3%E6%AF%94%E7%89%B9%E5%B8%81-53f434b26105) by @guang
+* [Decred: Where did it all begin?](https://thedecreddigest.com/2017/06/10/decred-where-did-it-all-begin/) by @thedecreddigest - [in Spanish](https://medium.com/@decred_es/decred-d%C3%B3nde-comenz%C3%B3-todo-aaa49fed0091) by @elian
+* [Decred Recruiting](https://blog.decred.org/2017/07/25/Decred-Recruiting/) by @jy-p - [in Spanish](https://medium.com/@decred_es/c%C3%B3mo-ser-contratista-en-decred-d0f05386f799) by @elian
 * Decred Journal - October 2018 [in Russian](https://medium.com/decred-russia/decred-journal-%D0%BE%D0%BA%D1%82%D1%8F%D0%B1%D1%80%D1%8C-2018-1eeffc65344c) and [in Italian](https://medium.com/decred-ita/decred-journal-ottobre-2018-a68e88c926ff) by @DZ. This is epic work, October issue was a 53 kilobytes of text, 1.5x larger than previous record.
-* @kozel's [Decred Infrastructure Interviews: feeleep, Operator, coinmine.pl](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4) [in Polish](https://medium.com/decred-polska/decred-interesuj%C4%85cy-i-nieszablonowy-wywiad-z-operatorem-coinmine-pl-11e92657136e) by @kozel
+* [Decred Infrastructure Interviews: feeleep, Operator, coinmine.pl](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4) by @kozel - [in Polish](https://medium.com/decred-polska/decred-interesuj%C4%85cy-i-nieszablonowy-wywiad-z-operatorem-coinmine-pl-11e92657136e) by @kozel
 
 Videos:
 
 * Several videos were added to Decred's Texas Bitcoin Conference [playlist](https://www.youtube.com/playlist?list=PLaMrpvQ0yJ_x4L3vtUwfZOM6euh3P8-fx) which now has 18 videos. All 52 videos from the event are in [this playlist](https://www.youtube.com/playlist?list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_).
-* @moo31337 gave an extended [interview with Paul Snow](https://www.youtube.com/watch?v=qCQB-h3Vx90) after the Texas Bitcoin Conference discussing the behind the scenes history of Decred and other open source projects.
+* @moo31337 gave an extended [interview with Paul Snow](https://www.youtube.com/watch?v=MgtBRlAfu2k) after the Texas Bitcoin Conference discussing the behind the scenes history of Decred and other open source projects.
 * Videos with @moo31337 from Web Summit: [Investing in Crypto](https://www.youtube.com/watch?v=GO_Iv4vRjZs), [Is crypto here to stay?](https://www.youtube.com/watch?v=L-OzMPHbDi4).
 * Crypto with Chingas [interviewed @joshuam](https://www.youtube.com/watch?v=o5jSLGiAdb8) about the importance of dispute resolution in a decentralized project.
-* {1105} https://www.youtube.com/watch?v=MgtBRlAfu2k {duplicate of marco's interview?}
-* {1106} Decred im Coincheck - Zahlen, Daten und Fakten ([youtube](https://www.youtube.com/watch?v=mHpqDpSd0Fs))
-* {1109} Politeia, como funciona Os desenvolvedores Fernando e Tiago Alves explicam ([youtube](https://www.youtube.com/watch?v=usWrs9B2Rm4), featuring @Tiago Alves and @fernandoabolafio)
 
-
-Audio:
-
-* {}
+Standard & Consensus rated Decred C+. The original report is in [Chinese](https://michelangelo.sncrating.com/report/168) and @guang wrote a [review](https://medium.com/@guang.dcr/%E8%A7%A3%E6%9E%90%E8%AF%84%E7%BA%A7-dcr-%E9%80%9A%E8%BF%87%E6%B7%B7%E5%90%88%E5%85%B1%E8%AF%86%E6%9C%BA%E5%88%B6%E5%B9%B3%E8%A1%A1%E6%9D%83%E7%9B%8A%E5%88%86%E9%85%8D-%E6%A0%87%E5%87%86%E5%85%B1%E8%AF%86%E8%AF%84%E7%BA%A7-5edc6f03dc1c) of it in Chinese also. The weak aspects noted by the report are low social media activity, low trading volume and high liquidity risk. The strong aspects are hybrid PoW+PoS system that balances holders, miners and developers, experienced development team and better sovereignty of the community enabled by voting systems.
 
 ## Community Discussions
 
