--- a/journal/201811.md
+++ b/journal/201811.md
@@ -210,20 +210,20 @@ Upcoming:
 
 Featured articles:
 
-* {1007} Blockchain forks and chain splits: why we should avoid them by @Haon ([medium](https://blog.goodaudience.com/blockchain-forks-and-chain-splits-why-we-should-avoid-them-f54c693a90f1), _missed in Oct issue_)
-* {1105} Marco Peereboom Interview: Governance, Decred & Politeia ([coinbureau.com](https://www.coinbureau.com/interview/marco-peereboom-decred/))
-* {1108} Decred Infrastructure Interviews: feeleep, Operator, coinmine.pl ([medium](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4))
-* {1115} PR in Politeia: Process, Progress, and Pitching In by @Dustorf ([medium](https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4))
-* {1115} Blockchain governance: how Decred iterates upon Bitcoin by @zubairzia0 ([medium](https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e))
-* {1117} DCR Ticket Splitting - All you need to know! by @David ([medium](https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3), [reddit](https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/))
-* {1126} Hash War Theater: A Costly Spectacle by @richardred ([medium](https://medium.com/@richardred/hash-war-theater-67d3fcac3e97))
-* {1129} What is Decred? by @kozel (Polish, [bithub.pl](https://bithub.pl/artykuly/czym-jest-decred/))
+* Blockchain forks and chain splits: why we should avoid them by @Haon ([medium](https://blog.goodaudience.com/blockchain-forks-and-chain-splits-why-we-should-avoid-them-f54c693a90f1), _missed in Oct issue_)
+* Marco Peereboom Interview: Governance, Decred & Politeia ([coinbureau.com](https://www.coinbureau.com/interview/marco-peereboom-decred/))
+* Decred Infrastructure Interviews: feeleep, Operator, coinmine.pl ([medium](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4))
+* PR in Politeia: Process, Progress, and Pitching In by @Dustorf ([medium](https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4))
+* Blockchain governance: how Decred iterates upon Bitcoin by @zubairzia0 ([medium](https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e))
+* DCR Ticket Splitting - All you need to know! by @David ([medium](https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3), [reddit](https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/))
+* Hash War Theater: A Costly Spectacle by @richardred ([medium](https://medium.com/@richardred/hash-war-theater-67d3fcac3e97))
+* What is Decred? by @kozel (Polish, [bithub.pl](https://bithub.pl/artykuly/czym-jest-decred/))
 
 Articles:
 
-* {1103} Decred Review – Democratic Governance Puts Users in Control ([coiniq.com](https://coiniq.com/decred-review/))
-* {1122} Smaller PoW coins are in constant danger of 51% attacks – Decred (DCR) governance model is the solution ([captainaltcoin.com](https://captainaltcoin.com/smaller-pow-coins-are-in-constant-danger-of-51-attacks-decred-dcr-governance-model-is-the-solution/))
-* {1124} Decred Ticket Splitting by @guang (Chinese, [medium](https://medium.com/@guang.dcr/%E6%89%AB%E7%9B%B2-decred%E5%88%86%E7%A5%A8-ffe3eb2de64d))
+* Decred Review – Democratic Governance Puts Users in Control ([coiniq.com](https://coiniq.com/decred-review/))
+* Smaller PoW coins are in constant danger of 51% attacks – Decred (DCR) governance model is the solution ([captainaltcoin.com](https://captainaltcoin.com/smaller-pow-coins-are-in-constant-danger-of-51-attacks-decred-dcr-governance-model-is-the-solution/))
+* Decred Ticket Splitting by @guang (Chinese, [medium](https://medium.com/@guang.dcr/%E6%89%AB%E7%9B%B2-decred%E5%88%86%E7%A5%A8-ffe3eb2de64d))
 
 There were more articles on various websites, but we only list a selected few. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
 
