small markets correction

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -278,7 +278,7 @@ Chat index was omitted from this issue. The plan is to replace it with a live do
 
 ## Markets
 
-The market saw a $70B USD drop in November with most top 100 cryptoassets losing 30% to 60% of USD value.  Bitcoin established an aggregated low at $3606 USD after dropping from its monthly high of $6540 USD making a total 45% peak bottom spread. Between November 14th and 15th most top 100 cryptoassets lost 10-20% USD value in a single day - one day before the infamous BCH split.  Some sources such as [Bloomberg](https://www.bloomberg.com/news/articles/2018-11-16/crypto-winter-comes-early-as-bitcoin-slide-spurs-viability-fears) the BTC dump was sparked by some pump for Bitcoin Cash fork, citing fear, uncertainty and doubt. BCH lost 60% during the month of November going from $420 USD to $170 USD by the end of the month. Others like [Yahoo Finance](https://finance.yahoo.com/news/major-cryptocurrencies-drop-again-bitcoin-111026294.html) attribute the [SEC rulings](http://www.bitcoinpower101.com/2018/11/24/the-secs-recent-rulings-are-more-about-exchanges-than-icos/) about ICOs to the drop. After cohosting various Texas Bitcoin Conference Events with Decred in late October, [Factom](https://www.factom.com/) was the standout large project performer in November with a 130% rise in November which most sources attribute to their [partnership with Equator](https://www.nasdaq.com/press-release/equator-launches-mortgage-servicing-blockchain-solution-20181113-00843) a company in the mortgage service industry.  Decred was not immune to the market movement and saw a drop from $39.98 USD on November 1st to $19.81 USD at end of month.
+The market saw a $70B USD drop in November with most top 100 cryptoassets losing 30% to 60% of USD value.  Bitcoin established an aggregated low at $3606 USD after dropping from its monthly high of $6540 USD making a total 45% peak bottom spread. Between November 14th and 15th most top 100 cryptoassets lost 10-20% USD value in a single day - one day before the infamous BCH split.  Some sources including [Bloomberg](https://www.bloomberg.com/news/articles/2018-11-16/crypto-winter-comes-early-as-bitcoin-slide-spurs-viability-fears) attributed the BTC dump to the Bitcoin Cash fork, citing fear, uncertainty and doubt. BCH lost 60% during the month of November going from $420 USD to $170 USD by the end of the month. Others like [Yahoo Finance](https://finance.yahoo.com/news/major-cryptocurrencies-drop-again-bitcoin-111026294.html) attribute the [SEC rulings](http://www.bitcoinpower101.com/2018/11/24/the-secs-recent-rulings-are-more-about-exchanges-than-icos/) about ICOs to the drop. After cohosting various Texas Bitcoin Conference Events with Decred in late October, [Factom](https://www.factom.com/) was the standout large project performer in November with a 130% rise in November which most sources attribute to their [partnership with Equator](https://www.nasdaq.com/press-release/equator-launches-mortgage-servicing-blockchain-solution-20181113-00843) a company in the mortgage service industry.  Decred was not immune to the market movement and saw a drop from $39.98 USD on November 1st to $19.81 USD at end of month.
 
 ## Relevant External
 
