--- a/journal/201811.md
+++ b/journal/201811.md
@@ -246,35 +246,31 @@ Standard & Consensus rated Decred C+. The original report is in [Chinese](https:
 
 ## Community Discussions
 
-Community stats:
+Community stats as of Dec 1:
 
-* Twitter followers {} (+{})
-* Reddit subscribers {} (+{})
-* Matrix users {} (+{})
-* Slack users {} (+{})
-* YouTube subscribers {} (+{})
-* Facebook {} (+{}) followers and {} (+{}) likes
-* LinkedIn followers: Decred Page {433} (+{27}), Politeia page {20} (+{8}) 
-* GitHub {} (+{}) stars and {} (+{}) forks of dcrd repository
+* Twitter followers 40004 (-1598)
+* Reddit subscribers 9131 (+147)
+* Matrix users 203 (+10)
+* Slack users 6353 (+82)
+* YouTube subscribers 3736 (+10)
+* Facebook 3105 (+20) followers and 2867 (+18) likes
+* LinkedIn followers: Decred Page 433 (+27), Politeia page 20 (+8) 
+* GitHub 447 (+17) stars and 1159 (+41) forks of dcrd repository
 
 Comm systems news:
 
-* New #research room
-* Bridge interruptions led to some messages not being delivered from Slack to Matrix
-* A new subreddit was started to overcome the limitations of r/decred, discussion [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154302771624142JbZDI:decred.org). _(bee: yes I'm trolling)_
-* Still looking for more Discord mods and someone to implement spam resistance
+* New [#research](https://matrix.to/#/!vGasNHFXqjoEWUBTIi:decred.org) room was created to work on projects for Open Source Research Proposal.
+* Bridge interruptions led to some messages not being delivered from Slack to Matrix.
+* A new subreddit was started to overcome the disturbing development of censorship of r/decred, discussion [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154302771624142JbZDI:decred.org). _(bee: yes I'm trolling)_
+* Two new [rules](https://www.reddit.com/r/decred/about/rules/) added to r/decred: "One Price Thread at a Time" and "No Enticing". Motivation explained in [this post](https://www.reddit.com/r/decred/comments/9zy3xt/new_rule_one_price_thread_at_a_time/).
+* Still looking for more Discord mods and someone to implement spam resistance.
 * There was a phishing attempt to scam MyEtherWallet users. Stay vigilant.
 
-{selected discussed topics, as bullet list or one paragraph per topic}
+Twitter: [a poll](https://twitter.com/KyleSamani/status/1062382292860059648) on whether open Politeia voting is a good process, more of the beloved plutocracy thing; on-chain governance blockchains are [not the same](https://twitter.com/spencernoon/status/1062482562482868224), Decred vs Tezos governance systems.
 
-Twitter:
+Reddit: whether DCR whales are [good or bad](https://www.reddit.com/r/decred/comments/9t9sju/the_placeholder_whales_good_or_bad_for_decred_in/) for Decred; [investing](https://www.reddit.com/r/decred/comments/9wpx1b/treasuryenhancing_products_built_in_top_of_decred/) using Treasury funds and conflicts of interest; Politeia [hub-and-spoke model](https://www.reddit.com/r/decred/comments/9yu6pr/politeia_hubandspoke_model_for_private_torrent/) for private torrent trackers; [trusting](https://www.reddit.com/r/decred/comments/9zi8tz/will_it_be_possible_to_sign_tickets_with_ledger/) hardware wallets; [how many](https://www.reddit.com/r/decred/comments/a0utmf/how_many_atomic_swaps_have_actually_been_achieved/) atomic swaps were made.
 
-* a poll on whether open Politeia voting is a good process, more of the beloved plutocracy thing https://twitter.com/KyleSamani/status/1062382292860059648
-* Decred vs Tezos governance systems https://twitter.com/spencernoon/status/1062482562482868224
-
-Reddit: {interesting threads}
-
-Chat index was omitted from this issue. The plan is to replace it with a live document.
+Chat index was omitted from this issue. The plan is to replace it with a live collaborative document.
 
 ## Markets
 
