Add Mexico event

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -203,6 +203,7 @@ Attended:
 Upcoming:
 
 * [The North American Bitcoin Conference](https://btcmiami.com/) in Miami, USA on Jan 16-18. @jy-p will give a 15 minute presention on the main stage on Politeia. He'll also explore a wide variety of applications that could utilize Politeia, including cryptocurrency, corporate, and governmental. Examples include tokens, record keeping and voting systems. Decred will also have a 10'x8' exhibit booth, so we'll need to put a team together. We're looking for community members to join us to work the show. Please message @Dustorf if you're interested.
+* [Jalisco Talent Land](https://www.talent-land.mx/#entradas) in Guadalajara, Mexico on Apr 22-26. Decred will have a 3x3 m booth with 10 conference passes. @elian will present an overview of Decred (45 min) with Q&A (15min), plus there will be a two hour breakout session where we'll walk through How to Use Decrediton, Staking Process, Lifescycle of a Ticket, and How to Use Politeia. Contact @elian if you're interested in helping/attending.
 
 @jz posted [guidelines](https://gist.github.com/jzbz/4431f620f2bad8032dc3caef2ed9112b) on representing Decred at conferences.
 
