--- a/journal/201811.md
+++ b/journal/201811.md
@@ -68,53 +68,45 @@ As previously reported funding for [Ditto PR services](https://proposals.decred.
 
 New proposals as of Dec 4 are listed below.
 
-**[Upgrade mining algorithm to ProgPoW](https://proposals.decred.org/proposals/0aaab331075d08cb03333d5a1bef04b99a708dcbfebc8f8c94040ceb1676e684) submitted by engineerking on Nov 11**
+[Upgrade mining algorithm to ProgPoW](https://proposals.decred.org/proposals/0aaab331075d08cb03333d5a1bef04b99a708dcbfebc8f8c94040ceb1676e684) submitted by engineerking on Nov 11
 
-The author proposes to change Decred's mining algorithm to [ProgPoW](https://github.com/ifdefelse/ProgPOW).
+* The author proposes to change Decred's mining algorithm to [ProgPoW](https://github.com/ifdefelse/ProgPOW).
+* Status: Author has not yet authorized the start of voting.
 
-Status: Author has not yet authorized the start of voting.
+[Decred Open Source Research proposal 2 - research projects](https://proposals.decred.org/proposals/5d9cfb07aefb338ba1b74f97de16ee651beabc851c7f2b5f790bd88aea23b3cb) submitted by @richardred on Nov 21
 
-**[Decred Open Source Research proposal 2 - research projects](https://proposals.decred.org/proposals/5d9cfb07aefb338ba1b74f97de16ee651beabc851c7f2b5f790bd88aea23b3cb) submitted by @richardred on Nov 21**
+* A follow-up to the first [research proposal](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) that aims to collect ideas for research projects and determine the most needed ones  which has been approved.
+* Status: Author has not yet authorized the start of voting.
 
-A follow-up to the first [research proposal](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) that aims to collect ideas for research projects and determine the most needed ones  which has been approved.
+[Decred integration into Crypto-ATMs](https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) submitted by bcashgr on Nov 24
 
-Status: Author has not yet authorized the start of voting.
+* This proposal is from a company called Bcash it aims to seek funding to integerate Decred into their ATMs. Development cost of EUR 25,000 and 1,650 EUR/month for support.
+* Status: Voting is active since Dec 4.
 
-**[Decred integration into Crypto-ATMs](https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) by bcashgr on Nov 24**
+[Decred Radio Advertising, 190+ FM and AM Stations, + Intl. Satellite](https://proposals.decred.org/proposals/7fe5d07a4ffff7dc6a83383018823d880b1c1db0a29305e74934817cf2b4e2ce) submitted by ftl_ian on Nov 26
 
-This proposal is from a company called Bcash it aims to seek funding to integerate Decred into their ATMs. Development cost of EUR 25,000 and 1,650 EUR/month for support.
+* This is a proposal to get Decred advertised on a radio show called "Free Talk Live". Total cost is $22,750 for 13 weeks.
+* Status: Voting is active since Dec 4.
 
-Status: Voting is active since Dec 4.
+[Decredex](https://proposals.decred.org/proposals/e78bc28631d0e682912e3ece25944481bf978b906ea44b1ed36470c0f48b27fc) submitted by fabianreum on Nov 26
 
-**[Decred Radio Advertising, 190+ FM and AM Stations, + Intl. Satellite](https://proposals.decred.org/proposals/7fe5d07a4ffff7dc6a83383018823d880b1c1db0a29305e74934817cf2b4e2ce) submitted by ftl_ian on Nov 26**
+* This proposal requests funding to work on a decentralized exchange by a company called REUM Ltd. It has a maximum budged of $1,086,500.
+* Status: Voting is active since Dec 4.
 
-This is a proposal to get Decred advertised on a radio show called "Free Talk Live". Total cost is $22,750 for 13 weeks.
+[Add Decred support to Coffee Wallet](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) submitted by francio on Nov 29
 
-Status: Voting is active since Dec 4.
+* The proposal aims to get funds to work on adding Decred support to "Coffee Wallet". This would cost 150 DCR and is projected to be ready by early January.
+* Status: Author has not yet authorized the start of voting.
 
-**[Decredex](https://proposals.decred.org/proposals/e78bc28631d0e682912e3ece25944481bf978b906ea44b1ed36470c0f48b27fc) submitted by fabianreum on Nov 26**
+[Stable coin - USDD](https://proposals.decred.org/proposals/85fc65cef080cfc3564906fd3d488b827d74fc99bb29143ed8aa6c400b765be9) submitted by fabianreum on on Nov 29
 
-This proposal requests funding to work on a decentralized exchange by a company called REUM Ltd. It has a maximum total budged of $1,086,500.
+* This proposal requests funding to work on a stablecoin (USDD) backed by Decred. It involves partnerships between multiple companies. They have budgeted $1,576,000 for 4 years, a full breakdown is provided in the proposal.
+* Status: Author has not yet authorized the start of voting.
 
-Status: Voting is active since Dec 4.
+[Decred Bug Bounty Proposal](https://proposals.decred.org/proposals/d33a2667469b56942adf42453def6cc2292325251e4cf791e806939ea9efc9e1) submitted by @degeri on Nov 30
 
-**[Add Decred support to Coffee Wallet](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) submitted by francio on Nov 29**
-
-The proposal aims to get funds to work on adding Decred support to "Coffee Wallet". This would cost 150 DCR and is projected to be ready by early January.
-
-Status: Author has not yet authorized the start of voting.
-
-**[Stable coin - USDD](https://proposals.decred.org/proposals/85fc65cef080cfc3564906fd3d488b827d74fc99bb29143ed8aa6c400b765be9) submitted by fabianreum on on Nov 29**
-
-This proposal requests funding to work on a stablecoin (USDD) backed by Decred. It involves partnerships between multiple companies. They have budgeted $1,576,000 for 4 years, a full breakdown is provided in the proposal.
-
-Status: Author has not yet authorized the start of voting.
-
-**[Decred Bug Bounty Proposal](https://proposals.decred.org/proposals/d33a2667469b56942adf42453def6cc2292325251e4cf791e806939ea9efc9e1) submitted by @degeri on 30 Nov**
-
-{PLEASE FILL THIS}
-
-Status: Author has not yet authorized the start of voting.
+* {PLEASE FILL THIS}
+* Status: Author has not yet authorized the start of voting.
 
 Multiple people started hacking on Politeia data in #proposals and #research. @snr01 shared [charts of voting data](https://github.com/snr01/PiVotingCharts).
 
