--- a/journal/201811.md
+++ b/journal/201811.md
@@ -327,4 +327,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): {}, {} and {}.
+Credits (alphabetical order): bee, degeri, guang, Haon, kozel, oregonisaac, richardred, zubairzia0.
