added telegram user count and change

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -242,6 +242,7 @@ Community stats as of Dec 1:
 * Reddit subscribers 9,131 (+147)
 * Matrix users 203 (+10)
 * Slack users 6,353 (+82)
+* Telegram users 4,642 (+213)
 * YouTube subscribers 3,736 (+10)
 * Facebook 3,105 (+20) followers and 2,867 (+18) likes
 * LinkedIn followers: Decred Page 433 (+27), Politeia page 20 (+8) 
