added dev stats

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -50,7 +50,7 @@ Ticket splitting support groups exist both on the [Decred Slack](https://decred.
 
 [docs](https://github.com/decred/dcrdocs): November was a huge month for documentation with a variety of community supported changes and updates. The [proposal](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75) passed which confirmed a community desire to change "PoS Mining" to "PoS Voting" and "stakepool" to "Voting Service Provider (VSP)" in all Decred documentation. First batch of changes is [merged](https://github.com/decred/dcrdocs/pull/590). Updates were made to [adopt the term "Decred Treasury"](https://github.com/decred/dcrdocs/pull/690). For those looking to take a deeper dive into Politeia a new [Navigating Politeia Data](https://docs.decred.org/advanced/navigating-politeia-data/) page was created. The long awaited [Decred Glossary](https://github.com/decred/dcrdocs/pull/675) was completed and published this month in part due to a huge effort by @s_ben and many people who supported the work with feedback and suggestions. We highly recommend utilizing [the glossary](https://docs.decred.org/glossary/) to improve our shared community understanding.
 
-Dev activity stats for November: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
+Dev activity stats for November: 266 active PRs, 268 master commits, 44,955 added and 25,448 deleted lines spread across 8 repositories. Contributions came from 3-11 developers per repository. ([chart](https://twitter.com/decredproject/status/1070413196555636736))
 
 ## People
 
