Remove remaining todos

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – November 2018
+# Decred Journal – November 2018
 
 ![Web Summit in Lisbon](../img/websubbmit-300.jpg "Web Summit in Lisbon")
 
@@ -337,10 +337,10 @@ Quite a lot of security troubles this month, but hopefully these warnings will h
 
 ## About This Issue
 
-This is the 8th issue of Decred Journal. It is available on [GitHub]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the 8th issue of Decred Journal. It is available on [GitHub](https://xaur.github.io/decred-news/journal/201811). Past issues are available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Your feedback and contributions are welcome on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
+Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
 Credits (alphabetical order): bee, degeri, guang, Haon, kozel, oregonisaac, richardred, zubairzia0.
