--- a/journal/201811.md
+++ b/journal/201811.md
@@ -1,6 +1,6 @@
 # Decred Journal – November 2018
 
-![Web Summit in Lisbon](../img/websubbmit-300.jpg "Web Summit in Lisbon")
+![Web Summit in Lisbon](../img/websummit18-300.jpg "Web Summit in Lisbon")
 
 November was an exciting and productive month for the Decred Project. The community began to reap the benefits of Politeia development with live proposal voting and the first proposals being approved. Stakeholders collectively voiced key steering decisions regarding the future of contractor management, public relations, and research all from the comfort of their Decred wallet of choice (Decrediton or command line with the politeiavoter tool).
 
