--- a/journal/201811.md
+++ b/journal/201811.md
@@ -30,7 +30,7 @@ Note that some of these features will be available on the [mainnet site](https:/
 
 Work started on the features to [view diffs](https://github.com/decred/politeiagui/issues/754) between proposal revisions and to [highlight new comments](https://github.com/decred/politeiagui/pull/897).
 
-[Android wallet](https://github.com/decred/dcrandroid): mainnet pre-release version is available on [Google Play Store](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet)! The Play Store version includes updated currency conversion that shows [fee in local currency](https://github.com/decred/dcrandroid/issues/192) and [advanced password protection](https://github.com/decred/dcrandroid/issues/134) with the ability to [lock all data](https://github.com/decred/dcrandroid/issues/187) and to use an [access pin code](https://github.com/decred/dcrandroid/issues/180). This version also includes a security menu which allows users to [sign messages](https://github.com/decred/dcrandroid/issues/226) proving ownership of addresses. Another community sourced innovation is the [Hidden Account feature](https://github.com/decred/dcrandroid/issues/175). Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total. The added privacy this feature offers will be useful for community members buying and selling Decred at local meetups. Fund transfer between accounts was made simple with [dropdown selection](https://github.com/decred/dcrandroid/issues/119).
+[Android wallet](https://github.com/decred/dcrandroid): mainnet pre-release version is available on [Google Play Store](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet)! The Play Store version includes updated currency conversion that shows [fee in local currency](https://github.com/decred/dcrandroid/issues/192) and [advanced password protection](https://github.com/decred/dcrandroid/issues/134) with the ability to [lock all data](https://github.com/decred/dcrandroid/issues/187) and to use an [access pin code](https://github.com/decred/dcrandroid/issues/180). This version also includes a security menu which allows users to [sign messages](https://github.com/decred/dcrandroid/issues/226) proving ownership of addresses. Another community sourced innovation is the [Hidden Account feature](https://github.com/decred/dcrandroid/issues/175). Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total. The added privacy this feature offers will be useful for people buying and selling Decred at local meetups. Fund transfer between accounts was simplified with [dropdown selection](https://github.com/decred/dcrandroid/issues/119).
 
 [iOS wallet](https://github.com/raedahgroup/dcrios): the wallet is currently in beta testing and will require additional development cycles to incorporate the feature set available on Android.
 
@@ -77,12 +77,12 @@ Welcome aboard!
 
 As previously reported, funding for [Ditto PR services](https://proposals.decred.org/proposals/27f87171d98b7923a1bd2bee6affed929fa2d2a6e178b5c80a9971a92a5c7f50) and [Open Source Research](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) was approved early in November. Mid-November the Decred community discussed contractor management and voted to adopt a [Decred Contractor Clearance](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4) process which aims formalize best practices employed by open source projects. [Premium listing](https://proposals.decred.org/proposals/34707d34b09c3ebcf0d4aa604e8a08244e8f0f082c0af3f33d85778c93c81434) on Easyrabbit exchange was rejected.
 
-New proposals as of Dec 4 are listed below.
+New proposals as of Dec 6 are listed below.
 
 [Upgrade mining algorithm to ProgPoW](https://proposals.decred.org/proposals/0aaab331075d08cb03333d5a1bef04b99a708dcbfebc8f8c94040ceb1676e684) submitted by engineerking on Nov 11
 
 * The author proposes to change Decred's mining algorithm to [ProgPoW](https://github.com/ifdefelse/ProgPOW).
-* Status: Author has not yet authorized the start of voting.
+* Status: Abandoned.
 
 [Decred Open Source Research proposal 2 - research projects](https://proposals.decred.org/proposals/5d9cfb07aefb338ba1b74f97de16ee651beabc851c7f2b5f790bd88aea23b3cb) submitted by @richardred on Nov 21
 
@@ -101,7 +101,7 @@ New proposals as of Dec 4 are listed below.
 
 [Decredex](https://proposals.decred.org/proposals/e78bc28631d0e682912e3ece25944481bf978b906ea44b1ed36470c0f48b27fc) submitted by fabianreum on Nov 26
 
-* This proposal requests funding to work on a decentralized exchange by a company called REUM Ltd. It has a maximum budged of $1,086,500.
+* This proposal requests funding to work on a decentralized exchange by a company called REUM Ltd. It has a maximum budget of $1,086,500.
 * Status: Voting is active since Dec 4.
 
 [Add Decred support to Coffee Wallet](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) submitted by francio on Nov 29
@@ -119,7 +119,7 @@ New proposals as of Dec 4 are listed below.
 * This proposal aims to establish a bug bounty program for Decred, through which anyone who reports a bug or vulnerability can be compensated. The proposal requests a budget of $5,000 for 6 months to cover setup and operations costs, and estimates an upper limit of $100,000 for payouts during this time. @degeri has put considerable effort into consulting with the community on how this bounty program should be operated, and in particular making sure that the current Decred contractors who would work with the program are on board.
 * Status: Author has not yet authorized the start of voting.
 
-Multiple people started hacking on Politeia data in #proposals and #research. @snr01 shared [charts of voting data](https://github.com/snr01/PiVotingCharts).
+Several people started hacking on Politeia data in #proposals and #research. @snr01 shared [charts of voting evolution](https://github.com/snr01/PiVotingCharts).
 
 Low quality proposals cluttering Politeia were discussed in depth and multiple ideas were suggested. @richardred gave a nice overview of this in [Politeia Digest #4](https://medium.com/politeia-digest/politeia-digest-issue-4-nov-7-nov-13-2018-685e18e7491a).
 
@@ -139,7 +139,7 @@ After the price dropped to 96.7, 1,378 tickets were purchased in a single window
 
 [@permabull nino](https://twitter.com/ImacallyouJawdy) shared [a few](https://twitter.com/ImacallyouJawdy/status/1065272779447009281) [more](https://twitter.com/ImacallyouJawdy/status/1060990375064522752) charts showing an uptick in deposited DCR.
 
-Nodes: as of Dec 01 there are 204 public listening nodes and 332 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 6.5% are v1.4.0(pre) dev builds (+0.5%), 50% on v1.3.0 (+5%), 25% on v1.2.0 (-3%), 11% on v1.1.2 (-3%), 5% on v1.1.0.
+Nodes: as of Dec 1 there are 204 public listening nodes and 332 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 6.5% are v1.4.0(pre) dev builds (+0.5%), 50% on v1.3.0 (+5%), 25% on v1.2.0 (-3%), 11% on v1.1.2 (-3%), 5% on v1.1.0.
 
 ## Mining
 
@@ -313,11 +313,11 @@ Looking at all the fighting in other communities I (@bee) can't help but insert 
 
 Aragon [released](https://blog.aragon.org/aragon-06-is-live-on-mainnet/) a new version on Oct 30 which allows users to create organizations on the Ethereum mainnet. Prior to this, 15,000+ organizations had apparently been created through previous versions on Ethereum testnets. Aragon can be used to create an "organization", add members and assign them tokens, and then hold signal votes with those tokens. The community also recently voted [overwhelmingly](https://twitter.com/AragonProject/status/1063590019749855237) (99.97%!) to approve [AGP-1](https://raw.githubusercontent.com/aragon/AGPs/8c945258fc58c842752a49946514815a4fdd971d/AGPs/AGP-1.md), a Governance Proposal Process.
 
-The [NavCoin community fund](https://navcoin.org/en/community-fund/) was [launched](https://medium.com/@NAVCoin/community-fund-activated-edc72207a0c0) on Nov 16. NavCoin's community fund operates on "dual-vote consensus", with an initial vote to decide if a proposal is approved or not, and then a subsequent vote to determine whether the payout should be made (after the work is done). Voters are participants in NavCoin staking, and vote with the weight of their stake. The community fund receives 0.25 NAV from each block minted, 500K NAV per year, or around $93k at today's prices. Proposal voting lasts for one week and requires participation of 50% of stakers, with 70% approval required for acceptance.
+The [NavCoin community fund](https://navcoin.org/en/community-fund/) was [launched](https://medium.com/@NAVCoin/community-fund-activated-edc72207a0c0) on Nov 16. NavCoin's community fund operates on "dual-vote consensus", with an initial vote to decide if a proposal is approved or not, and then a subsequent vote to determine whether the payout should be made (after the work is done). Voters are participants in NavCoin staking, and vote with the weight of their stake. The community fund receives 0.25 NAV from each block minted, 500K NAV per year, or around $93K at today's prices. Proposal voting lasts for one week and requires participation of 50% of stakers, with 70% approval required for acceptance.
 
 UK government canceled a [stablecoin project](https://github.com/BitGo/prova) based on a fork of btcd. [@alexbosworth noted](https://twitter.com/alexbosworth/status/1056318062176145414): "The thing about stablecoins is that one day someone can come along and cancel the whole thing.".
 
-DEX: IDEX [decided](https://medium.com/aurora-dao/pragmatic-decentralization-how-idex-will-approach-industry-regulations-8b109212128a) to implement IP blocking and KYC, SEC [charged](https://www.sec.gov/news/press-release/2018-258) EtherDelta founder with operating an unregistered exchange.
+DEX news: IDEX [decided](https://medium.com/aurora-dao/pragmatic-decentralization-how-idex-will-approach-industry-regulations-8b109212128a) to implement IP blocking and KYC, SEC [charged](https://www.sec.gov/news/press-release/2018-258) EtherDelta founder with operating an unregistered exchange.
 
 Listing on Coinbase [does not always](https://www.ccn.com/why-did-bat-lose-28-of-its-value-overnight-after-coinbase-listing/) result in a pump.
 
@@ -325,9 +325,9 @@ Unchained podcast episode [discusses](https://twitter.com/laurashin/status/10597
 
 Bitfinex [abandons](https://www.ccn.com/op-ed-is-tether-trying-to-price-itself-out-of-the-stablecoin-wars/) the 1:1 conversion between USD and USDT while Tether.to [reopens](https://tether.to/tether-reopens-account-verification-and-direct-redemption-of-fiat-from-its-platform/) verifications and direct USDT withdrawals, min. $100,000 USD.
 
-Seven new Spectre and Meltdown attacks were [revealed](https://www.zdnet.com/article/researchers-discover-seven-new-meltdown-and-spectre-attacks/) that impact Intel, AMD and ARM CPUs to various degrees. This is following a new Intel Hyper-Threading [vulnerability](https://thehackernews.com/2018/11/portsmash-intel-vulnerability.html) discovered earlier same month. These revelations continue to show that we need safer and more open hardware to run our cryptocurrencies.
+Security news: Seven new Spectre and Meltdown attacks were [revealed](https://www.zdnet.com/article/researchers-discover-seven-new-meltdown-and-spectre-attacks/) that impact Intel, AMD and ARM CPUs to various degrees. This is following a new Intel Hyper-Threading [vulnerability](https://thehackernews.com/2018/11/portsmash-intel-vulnerability.html) discovered earlier same month. These revelations continue to show that we need safer and more open hardware to run our cryptocurrencies.
 
-SMS, and relying on mobile operators in general, shown to be a bad choice for 2FA. In this [recent incident](https://techcrunch.com/2018/11/15/millions-sms-text-messages-leaked-two-factor-codes/), a server not even protected with a password leaked millions of SMS messages containing 2FA codes, password resets and other sensitive information nearly in real-time. In another case, lawsuits [like this](https://www.coindesk.com/victims-sue-att-t-mobile-over-sim-swap-crypto-hacks/) will hopefully stimulate cellular providers to improve security, but they won't get your coins back. Speaking even more generally, most smartphones have a [baseband chip](https://en.wikipedia.org/wiki/Baseband_processor) and other proprietary parts - nobody really knows what they are doing or how vulnerable they are.
+SMS, and relying on mobile operators in general, shown to be a bad choice for 2FA. In this [recent incident](https://techcrunch.com/2018/11/15/millions-sms-text-messages-leaked-two-factor-codes/), a server not even protected with a password leaked millions of SMS messages containing 2FA codes, password resets and other sensitive information nearly in real-time. In another case, lawsuits [like this](https://www.coindesk.com/victims-sue-att-t-mobile-over-sim-swap-crypto-hacks/) will hopefully push cellular providers to improve security, but they won't get your coins back. Speaking even more generally, most smartphones have a [baseband chip](https://en.wikipedia.org/wiki/Baseband_processor) and other proprietary parts - nobody really knows what they are doing or how vulnerable they are.
 
 Headphone software [was caught](https://twitter.com/spazef0rze/status/1067583791596781570) installing a root certificate that can potentially be abused to impersonate websites.
 
