--- a/journal/201811.md
+++ b/journal/201811.md
@@ -343,6 +343,6 @@ Chinese translation by @guang is available on [Medium](https://medium.com/@guang
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
+Your feedback and contributions are welcome on [Reddit](https://www.reddit.com/r/decred/comments/a3tq54/decred_journal_november_2018/), [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
 Credits (alphabetical order): bee, degeri, guang, Haon, kozel, oregonisaac, richardred, zubairzia0.
