--- a/journal/201811.md
+++ b/journal/201811.md
@@ -241,6 +241,7 @@ Videos:
 * @moo31337 gave an extended [interview with Paul Snow](https://www.youtube.com/watch?v=MgtBRlAfu2k) after the Texas Bitcoin Conference discussing the behind the scenes history of Decred and other open source projects.
 * Videos with @moo31337 from Web Summit: [Investing in Crypto](https://www.youtube.com/watch?v=GO_Iv4vRjZs), [Is crypto here to stay?](https://www.youtube.com/watch?v=L-OzMPHbDi4).
 * Crypto with Chingas [interviewed @joshuam](https://www.youtube.com/watch?v=o5jSLGiAdb8) about the importance of dispute resolution in a decentralized project.
+* @michae2xl produced new Decred Weekly episodes and an interview with @Tiago Alves and @fernandoabolafio about Politeia. Find these and past videos in Portuguese on [Decred Brazil](https://www.youtube.com/channel/UC73wa2ddXuPWsmenVfeFTYg) channel.
 
 Standard & Consensus rated Decred C+. The original report is in [Chinese](https://michelangelo.sncrating.com/report/168) and @guang wrote a [review](https://medium.com/@guang.dcr/%E8%A7%A3%E6%9E%90%E8%AF%84%E7%BA%A7-dcr-%E9%80%9A%E8%BF%87%E6%B7%B7%E5%90%88%E5%85%B1%E8%AF%86%E6%9C%BA%E5%88%B6%E5%B9%B3%E8%A1%A1%E6%9D%83%E7%9B%8A%E5%88%86%E9%85%8D-%E6%A0%87%E5%87%86%E5%85%B1%E8%AF%86%E8%AF%84%E7%BA%A7-5edc6f03dc1c) of it in Chinese also. The weak aspects noted by the report are low social media activity, low trading volume and high liquidity risk. The strong aspects are hybrid PoW+PoS system that balances holders, miners and developers, experienced development team and better sovereignty of the community enabled by voting systems.
 
